<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fri_vendor</name>
  <version>1.0.0</version>
  <description>Vendor package for KUKA's Fast Robot Interface (FRI).</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <maintainer email="christopher.mower@kcl.ac.uk">cmower</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
